--- a/dword/top_1553.ucf
+++ b/dword/top_1553.ucf
@@ -28,47 +28,40 @@ NET "switch8"	LOC = "L14" | IOSTANDARD = LVCMOS33 | PULLUP ; 		# B11 / L14~IO_L4
 NET "switch9"	LOC = "M13" | IOSTANDARD = LVCMOS33 | PULLUP ;		# A11 / L16~IO_L47N_LDC_M1DQ1_1
 NET "switch10"	LOC = "K12" | IOSTANDARD = LVCMOS33 | PULLUP ; 		# B11 / L14~IO_L47P_FWE_B_M1DQ0_1
 
-NET "rxa_p_BC"     LOC = "H15" | IOSTANDARD = LVCMOS33; 		# IO B19
-NET "rxa_n_BC"     LOC = "H16" | IOSTANDARD = LVCMOS33; 		# IO A19
-NET "rxa_p_RT"     LOC = "D14" | IOSTANDARD = LVCMOS33; 		# IO B28
-NET "rxa_n_RT"     LOC = "D16" | IOSTANDARD = LVCMOS33; 		# IO A28
+# Transmit and receive
+NET "rxa_p_BC"     LOC = "T12" | IOSTANDARD = LVCMOS33; 		# IO A3
+NET "rxa_n_BC"     LOC = "T14" | IOSTANDARD = LVCMOS33; 		# IO A4
+NET "txa_p_BC"	   LOC = "T15" | IOSTANDARD = LVCMOS33 | DRIVE = 12;		# IO A5 
+NET "txa_n_BC"	   LOC = "R16" | IOSTANDARD = LVCMOS33 | DRIVE = 12;        # IO A6 
+#NET "rxa_p_BC"     LOC = "H15" | IOSTANDARD = LVCMOS33; 		# IO B19
+#NET "rxa_n_BC"     LOC = "H16" | IOSTANDARD = LVCMOS33; 		# IO A19
+#NET "rxa_p_RT"     LOC = "D14" | IOSTANDARD = LVCMOS33; 		# IO B28
+#NET "rxa_n_RT"     LOC = "D16" | IOSTANDARD = LVCMOS33; 		# IO A28
+#NET "txa_p_RT"	    LOC = "C2" | IOSTANDARD = LVCMOS33 | DRIVE = 12;		# IO C27
+#NET "txa_n_RT"	    LOC = "C3" | IOSTANDARD = LVCMOS33 | DRIVE = 12;        # IO D27
 
-# outputs
-NET "txa_p_BC"	    LOC = "A2" | IOSTANDARD = LVCMOS33 | DRIVE = 12;		# IO D30
-NET "txa_n_BC"	    LOC = "B2" | IOSTANDARD = LVCMOS33 | DRIVE = 12;        # IO D29
-NET "txa_p_RT"	    LOC = "C2" | IOSTANDARD = LVCMOS33 | DRIVE = 12;		# IO C27
-NET "txa_n_RT"	    LOC = "C3" | IOSTANDARD = LVCMOS33 | DRIVE = 12;        # IO D27
+# Capture signal outputs
+NET "csw"	        LOC = "R12" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# B3 
+NET "dw"	        LOC = "T13" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# B4 
+NET "enc_data_en"	LOC = "R14" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# B5 
+NET "enc_data"	    LOC = "R15" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# B6 
 
 # debug_sigs
-NET "tx_dval"	 LOC = "R1" | IOSTANDARD = LVCMOS33  ;		# D3 / R1~IO_L32N_M3DQ15_3
-NET "debug_out<0>"	LOC = "R2" | IOSTANDARD = LVCMOS33 ;		# C3 
-NET "debug_out<1>"	LOC = "T12" | IOSTANDARD = LVCMOS33 ;		# A3 
-NET "debug_out<2>"	LOC = "R12" | IOSTANDARD = LVCMOS33 ;		# B3 
-NET "debug_out<3>"	LOC = "T14" | IOSTANDARD = LVCMOS33 ;		# A4 / T14~IO_L51P_M1DQ12_1
-NET "debug_out<4>"	LOC = "T13" | IOSTANDARD = LVCMOS33 ;		# B4 / T13~IO_L51N_M1DQ13_1
-#NET "debug_out<5>"	LOC = "P2" | IOSTANDARD = LVCMOS33 ;		# C4 / P2~IO_L33P_M3DQ12_3
-#NET "debug_out<6>"	LOC = "P1" | IOSTANDARD = LVCMOS33 ;		# D4 / P1~IO_L33N_M3DQ13_3
-NET "debug_out<7>"  LOC = "M15" | IOSTANDARD = LVCMOS33;		# B9 / M15~IO_L46P_FCS_B_M1DQ2_1
-NET "debug_out<6>"	LOC = "R15" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# B6 / R15~IO_L49P_M1DQ10_1
-NET "debug_out<5>"	LOC = "T15" | IOSTANDARD = LVCMOS33 ;		# A5 / T15~IO_L50N_M1UDQSN_1
+NET "tx_dval"	    LOC = "F1"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D22
+NET "debug_out<0>"	LOC = "F3"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D23 
+NET "debug_out<1>"	LOC = "E1"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D24 
+NET "debug_out<2>"	LOC = "E3"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D25
+NET "debug_out<3>"	LOC = "D1"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D26
+NET "debug_out<4>"	LOC = "C2"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D27
+NET "debug_out<5>"	LOC = "B1"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D28
+NET "debug_out<6>"	LOC = "B2"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D29
+NET "debug_out<7>"  LOC = "A2"  | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D30
 
 # led2
-#NET "stat0"	LOC = "R2" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C3 / R2~IO_L32P_M3DQ14_3
-#NET "stat1"	LOC = "R1" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D3 / R1~IO_L32N_M3DQ15_3
-#NET "stat2"	LOC = "P2" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C4 / P2~IO_L33P_M3DQ12_3
-#NET "stat3"	LOC = "P1" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D4 / P1~IO_L33N_M3DQ13_3
-#NET "led2<4>"	LOC = "N3" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C5 / N3~IO_L34P_M3UDQS_3
-#NET "led2<5>"	LOC = "N1" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D5 / N1~IO_L34N_M3UDQSN_3
-#NET "led2<6>"	LOC = "M5" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C6 / M5~IO_L2P_3
-#NET "led2<7>"	LOC = "N4" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D6 / N4~IO_L2N_3
-#NET "led2<8>"	LOC = "M4" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C7 / M4~IO_L1P_3
-#NET "led2<9>"	LOC = "M3" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D7 / M3~IO_L1N_VREF_3
-
-# led2
-NET "stat0"	LOC = "M2" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C8 / M2~IO_L35P_M3DQ10_3
-NET "stat1"	LOC = "M1" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D8 / M1~IO_L35N_M3DQ11_3
-NET "stat2"	LOC = "L5" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C9 / L5~IO_L45N_M3ODT_3
-NET "stat3"	LOC = "L4" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D9 / L4~IO_L45P_M3A3_3
+NET "stat0"	LOC = "R1" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D3 / R1~IO_L32N_M3DQ15_3
+NET "stat1"	LOC = "P1" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D4 / P1~IO_L33N_M3DQ13_3
+NET "stat2"	LOC = "N1" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D5 / N1~IO_L34N_M3UDQSN_3
+NET "stat3"	LOC = "N4" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D6 / N4~IO_L2N_3
 #NET "led3<4>"	LOC = "L3" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C10 / L3~IO_L36P_M3DQ8_3
 #NET "led3<5>"	LOC = "L1" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# D10 / L1~IO_L36N_M3DQ9_3
 #NET "led3<6>"	LOC = "K2" | IOSTANDARD = LVCMOS33 | DRIVE = 12 ;		# C11 / K2~IO_L37P_M3DQ0_3
